Part-way through some refactoring

--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -104,7 +104,8 @@
     <Compile Include="Commands\Animations\GetResourcesCommand.cs" />
     <Compile Include="Commands\ArgumentParser.cs" />
     <Compile Include="Commands\Bitmaps\BitmapContextFactory.cs" />
-    <Compile Include="Commands\Bitmaps\ImportCommand.cs" />
+    <Compile Include="Commands\Bitmaps\ExtractBitmapCommand.cs" />
+    <Compile Include="Commands\Bitmaps\ImportBitmapCommand.cs" />
     <Compile Include="Commands\BSPs\BSPContextFactory.cs" />
     <Compile Include="Commands\BSPs\CollisionTestCommand.cs" />
     <Compile Include="Commands\BSPs\LoadResourcesCommand.cs" />
@@ -122,17 +123,16 @@
     <Compile Include="Commands\Core\ExecuteCommand.cs" />
     <Compile Include="Commands\Core\HelpCommand.cs" />
     <Compile Include="Commands\Core\SetLocaleCommand.cs" />
-    <Compile Include="Commands\Core\SetVarCommand.cs" />
-    <Compile Include="Commands\Editing\AddToCommand.cs" />
-    <Compile Include="Commands\Editing\CopyElementsCommand.cs" />
+    <Compile Include="Commands\Editing\AddBlockElementsCommand.cs" />
+    <Compile Include="Commands\Editing\CopyBlockElementsCommand.cs" />
     <Compile Include="Commands\Editing\EditBlockCommand.cs" />
     <Compile Include="Commands\Editing\EditTagContextFactory.cs" />
     <Compile Include="Commands\Editing\ExecuteCommand.cs" />
     <Compile Include="Commands\Editing\ExitToCommand.cs" />
     <Compile Include="Commands\Editing\ListFieldsCommand.cs" />
-    <Compile Include="Commands\Editing\PasteElementsCommand.cs" />
-    <Compile Include="Commands\Editing\RemoveFromCommand.cs" />
-    <Compile Include="Commands\Editing\SaveChangesCommand.cs" />
+    <Compile Include="Commands\Editing\PasteBlockElementsCommand.cs" />
+    <Compile Include="Commands\Editing\RemoveBlockElementsCommand.cs" />
+    <Compile Include="Commands\Editing\SaveTagChangesCommand.cs" />
     <Compile Include="Commands\Editing\SetFieldCommand.cs" />
     <Compile Include="Commands\LocalizedStringPrinter.cs" />
     <Compile Include="Commands\Models\ExtractModelCommand.cs" />
@@ -149,39 +149,37 @@
     <Compile Include="Commands\Scenarios\CopyForgePaletteCommand.cs" />
     <Compile Include="Commands\Scenarios\ScenarioContextFactory.cs" />
     <Compile Include="Commands\TagPrinter.cs" />
-    <Compile Include="Commands\Tags\AddressCommand.cs" />
-    <Compile Include="Commands\Tags\CleanCsvCommand.cs" />
-    <Compile Include="Commands\Tags\CollisionGeometryTestCommand.cs" />
-    <Compile Include="Commands\Tags\ConvertArmorCommand.cs" />
-    <Compile Include="Commands\Tags\ConvertCommand.cs" />
+    <Compile Include="Commands\Tags\GetTagAddressCommand.cs" />
+    <Compile Include="Commands\Tags\CleanCsvFileCommand.cs" />
+    <Compile Include="Commands\Tags\CollisionModelTestCommand.cs" />
+    <Compile Include="Commands\Tags\ConvertTagCommand.cs" />
     <Compile Include="Commands\Tags\ConvertPluginsCommand.cs" />
-    <Compile Include="Commands\Tags\DependencyCommand.cs" />
+    <Compile Include="Commands\Tags\TagDependencyCommand.cs" />
     <Compile Include="Commands\Tags\DuplicateTagCommand.cs" />
-    <Compile Include="Commands\Tags\EditCommand.cs" />
-    <Compile Include="Commands\Tags\ExportTagsCommand.cs" />
-    <Compile Include="Commands\Tags\ExtractBitmapCommand.cs" />
-    <Compile Include="Commands\Tags\ExtractBitmapsCommand.cs" />
+    <Compile Include="Commands\Tags\EditTagCommand.cs" />
+    <Compile Include="Commands\Tags\ExtractTagsCommand.cs" />
     <Compile Include="Commands\Tags\ExtractCommand.cs" />
     <Compile Include="Commands\Tags\GenerateLayoutsCommand.cs" />
     <Compile Include="Commands\Tags\GenerateTagNamesCommand.cs" />
-    <Compile Include="Commands\Tags\ImportBitmapCommand.cs" />
     <Compile Include="Commands\Tags\ImportCommand.cs" />
     <Compile Include="Commands\Tags\InfoCommand.cs" />
     <Compile Include="Commands\Tags\ListCommand.cs" />
     <Compile Include="Commands\Tags\ListNullTagsCommand.cs" />
     <Compile Include="Commands\Tags\ListStringsCommand.cs" />
     <Compile Include="Commands\Tags\ListUnreferencedTagsCommand.cs" />
-    <Compile Include="Commands\Tags\MapCommand.cs" />
+    <Compile Include="Commands\Tags\DisplayMapInfoCommand.cs" />
     <Compile Include="Commands\Tags\MatchTagsCommand.cs" />
     <Compile Include="Commands\Tags\ModelTestCommand.cs" />
     <Compile Include="Commands\Tags\NewTagCommand.cs" />
-    <Compile Include="Commands\Tags\CleanCacheCommand.cs" />
+    <Compile Include="Commands\Tags\CleanCacheFilesCommand.cs" />
+    <Compile Include="Commands\Tags\NullTagCommand.cs" />
     <Compile Include="Commands\Tags\OpenCacheCommand.cs" />
     <Compile Include="Commands\Tags\PhysicsModelTestCommand.cs" />
     <Compile Include="Commands\Tags\ResourceCommand.cs" />
+    <Compile Include="Commands\Tags\ResourceFile.cs" />
     <Compile Include="Commands\Tags\StringIdCommand.cs" />
     <Compile Include="Commands\Tags\TagCacheContextFactory.cs" />
-    <Compile Include="Commands\Tags\TestCommand.cs" />
+    <Compile Include="Commands\Tags\UpdateMapFilesCommand.cs" />
     <Compile Include="Commands\Unicode\GetCommand.cs" />
     <Compile Include="Commands\Unicode\ListCommand.cs" />
     <Compile Include="Commands\Unicode\SetCommand.cs" />
