--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -484,13 +484,13 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <Content Include="Tags\tagnames_1.106708 cert_ms23.csv">
+    <Content Include="tagnames_1.106708 cert_ms23.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Tags\tagnames_11.1.498295 Live.csv">
+    <Content Include="tagnames_11.1.498295 Live.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Tags\tagnames_12.1.700123 cert_ms30_oct19.csv">
+    <Content Include="tagnames_12.1.700123 cert_ms30_oct19.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
