--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Common\NamingConvention.cs" />
     <Compile Include="Common\Range.cs" />
     <Compile Include="Common\ReadOnlySet.cs" />
+    <Compile Include="Common\RealArgbColor.cs" />
     <Compile Include="Common\RealQuaternion.cs" />
     <Compile Include="Common\SimpleJson.cs" />
     <Compile Include="Common\StringId.cs" />
@@ -204,9 +205,9 @@
     <Compile Include="Common\TagReferenceBlock.cs" />
     <Compile Include="Common\TagVersionMap.cs" />
     <Compile Include="Common\Vector.cs" />
-    <Compile Include="Common\Vector2.cs" />
-    <Compile Include="Common\Vector3.cs" />
-    <Compile Include="Common\Vector4.cs" />
+    <Compile Include="Common\RealPoint2d.cs" />
+    <Compile Include="Common\RealPoint3d.cs" />
+    <Compile Include="Common\RealVector4d.cs" />
     <Compile Include="Common\Vertex.cs" />
     <Compile Include="Common\XCompress.cs" />
     <Compile Include="Cache\AES.cs" />
@@ -216,6 +217,8 @@
     <Compile Include="Cache\VertexStreamMS25.cs" />
     <Compile Include="Cache\StringIdResolverMS28.cs" />
     <Compile Include="Cache\StringIdResolverMS30.cs" />
+    <Compile Include="Geometry\CollisionGeometry.cs" />
+    <Compile Include="Geometry\CollisionMoppCode.cs" />
     <Compile Include="Serialization\DataSerializationContext.cs" />
     <Compile Include="Tags\TagConverter.cs" />
     <Compile Include="Geometry\BlenderPhmoReader.cs" />
