--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -192,12 +192,14 @@
     <Compile Include="Common\GameLanguage.cs" />
     <Compile Include="Common\Half.cs" />
     <Compile Include="Common\HalfHelper.cs" />
-    <Compile Include="Common\Matrix4x3.cs" />
+    <Compile Include="Common\RealMatrix4x3.cs" />
     <Compile Include="Common\NamingConvention.cs" />
     <Compile Include="Common\Range.cs" />
     <Compile Include="Common\ReadOnlySet.cs" />
     <Compile Include="Common\RealArgbColor.cs" />
     <Compile Include="Common\RealQuaternion.cs" />
+    <Compile Include="Common\RealVector2d.cs" />
+    <Compile Include="Common\RealVector3d.cs" />
     <Compile Include="Common\SimpleJson.cs" />
     <Compile Include="Common\StringId.cs" />
     <Compile Include="Common\Tag.cs" />
@@ -264,34 +266,6 @@
     <Compile Include="Layouts\TagLayoutWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="S3D\Blocks.cs" />
-    <Compile Include="S3D\Enums.cs" />
-    <Compile Include="S3D\PakFile.cs" />
-    <Compile Include="S3D\Scene.cs" />
-    <Compile Include="S3D\SceneCDT.cs" />
-    <Compile Include="S3D\SceneData.cs" />
-    <Compile Include="S3D\Template.cs" />
-    <Compile Include="S3D\TemplateBase.cs" />
-    <Compile Include="S3D\Texture.cs" />
-    <Compile Include="Scripting\ScriptActorTypeValue.cs" />
-    <Compile Include="Scripting\ScriptButtonPresetValue.cs" />
-    <Compile Include="Scripting\ScriptCharacterPhysicsValue.cs" />
-    <Compile Include="Scripting\ScriptControllerValue.cs" />
-    <Compile Include="Scripting\ScriptEventValue.cs" />
-    <Compile Include="Scripting\ScriptGameDifficultyValue.cs" />
-    <Compile Include="Scripting\ScriptGlobal.cs" />
-    <Compile Include="Scripting\ScriptJoystickPresetValue.cs" />
-    <Compile Include="Scripting\ScriptModelStateValue.cs" />
-    <Compile Include="Scripting\ScriptMultiplayerTeamValue.cs" />
-    <Compile Include="Scripting\ScriptPlayerCharacterTypeValue.cs" />
-    <Compile Include="Scripting\ScriptPrimarySkullValue.cs" />
-    <Compile Include="Scripting\ScriptSecondarySkullValue.cs" />
-    <Compile Include="Scripting\ScriptSubtitleSettingValue.cs" />
-    <Compile Include="Scripting\ScriptTable.cs" />
-    <Compile Include="Scripting\ScriptTeamValue.cs" />
-    <Compile Include="Scripting\ScriptValueType.cs" />
-    <Compile Include="Scripting\ScriptVoiceMaskValue.cs" />
-    <Compile Include="Scripting\ScriptVoiceOutputSettingValue.cs" />
     <Compile Include="Serialization\IDataBlock.cs" />
     <Compile Include="Serialization\ISerializationContext.cs" />
     <Compile Include="Serialization\MaxVersionAttribute.cs" />
@@ -304,39 +278,8 @@
     <Compile Include="Serialization\TagSerializer.cs" />
     <Compile Include="Serialization\TagStructureAttribute.cs" />
     <Compile Include="Serialization\TagStructureInfo.cs" />
-    <Compile Include="Shaders\ShaderCompiler.cs" />
-    <Compile Include="Shaders\ShaderConverter.cs" />
-    <Compile Include="Sounds\Info.cs" />
-    <Compile Include="Sounds\IWwiseObject.cs" />
-    <Compile Include="Sounds\IWwiseObjectVisitor.cs" />
-    <Compile Include="Sounds\RIFX.cs" />
-    <Compile Include="Sounds\RTPC.cs" />
-    <Compile Include="Sounds\SampleRate.cs" />
-    <Compile Include="Sounds\SoundBank.cs" />
-    <Compile Include="Sounds\SoundBankAction.cs" />
-    <Compile Include="Sounds\SoundBankActorMixer.cs" />
-    <Compile Include="Sounds\SoundBankEvent.cs" />
-    <Compile Include="Sounds\SoundBankFile.cs" />
-    <Compile Include="Sounds\SoundBankMusicPlaylist.cs" />
-    <Compile Include="Sounds\SoundBankMusicSegment.cs" />
-    <Compile Include="Sounds\SoundBankMusicSwitchContainer.cs" />
-    <Compile Include="Sounds\SoundBankMusicTrack.cs" />
-    <Compile Include="Sounds\SoundBankSequenceContainer.cs" />
-    <Compile Include="Sounds\SoundBankSwitchContainer.cs" />
-    <Compile Include="Sounds\SoundBankVoice.cs" />
-    <Compile Include="Sounds\SoundExtractor.cs" />
-    <Compile Include="Sounds\SoundFormat.cs" />
-    <Compile Include="Sounds\SoundFormatDetection.cs" />
-    <Compile Include="Sounds\SoundInfo.cs" />
-    <Compile Include="Sounds\SoundPack.cs" />
-    <Compile Include="Sounds\SoundPackFile.cs" />
-    <Compile Include="Sounds\SoundPackFolder.cs" />
-    <Compile Include="Sounds\SoundPath.cs" />
-    <Compile Include="Sounds\SoundResourceDefinition.cs" />
-    <Compile Include="Sounds\SoundScanner.cs" />
-    <Compile Include="Sounds\SoundType.cs" />
-    <Compile Include="Sounds\StateGroup.cs" />
-    <Compile Include="Sounds\WwiseObjectCollection.cs" />
+    <Compile Include="Geometry\ShaderCompiler.cs" />
+    <Compile Include="Geometry\ShaderConverter.cs" />
     <Compile Include="Tags\Definitions\Achievements.cs" />
     <Compile Include="Tags\Definitions\AiDialogueGlobals.cs" />
     <Compile Include="Tags\Definitions\AiGlobals.cs" />
