Even more cleanup

--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -183,35 +183,30 @@
     <Compile Include="Commands\VFiles\VFilesContextFactory.cs" />
     <Compile Include="Common\Angle.cs" />
     <Compile Include="Common\ArrayUtil.cs" />
-    <Compile Include="Common\Bitmask.cs" />
-    <Compile Include="Common\BoundingBox.cs" />
     <Compile Include="Common\D3DPointer.cs" />
     <Compile Include="Common\DdsHeader.cs" />
-    <Compile Include="Common\Euler2.cs" />
-    <Compile Include="Common\Euler3.cs" />
+    <Compile Include="Common\RealEulerAngles2d.cs" />
+    <Compile Include="Common\RealEulerAngles3d.cs" />
     <Compile Include="Common\GameLanguage.cs" />
     <Compile Include="Common\Half.cs" />
     <Compile Include="Common\HalfHelper.cs" />
     <Compile Include="Common\RealMatrix4x3.cs" />
     <Compile Include="Common\NamingConvention.cs" />
-    <Compile Include="Common\Range.cs" />
+    <Compile Include="Common\Bounds.cs" />
     <Compile Include="Common\ReadOnlySet.cs" />
     <Compile Include="Common\RealArgbColor.cs" />
     <Compile Include="Common\RealQuaternion.cs" />
+    <Compile Include="Common\RealRgbColor.cs" />
     <Compile Include="Common\RealVector2d.cs" />
     <Compile Include="Common\RealVector3d.cs" />
     <Compile Include="Common\SimpleJson.cs" />
     <Compile Include="Common\StringId.cs" />
     <Compile Include="Common\Tag.cs" />
     <Compile Include="Common\TagCacheMap.cs" />
-    <Compile Include="Common\TagReferenceBlock.cs" />
     <Compile Include="Common\TagVersionMap.cs" />
-    <Compile Include="Common\Vector.cs" />
     <Compile Include="Common\RealPoint2d.cs" />
     <Compile Include="Common\RealPoint3d.cs" />
     <Compile Include="Common\RealVector4d.cs" />
-    <Compile Include="Common\Vertex.cs" />
-    <Compile Include="Common\XCompress.cs" />
     <Compile Include="Cache\AES.cs" />
     <Compile Include="Cache\CacheVersionDetection.cs" />
     <Compile Include="Cache\StringIdResolverMS23.cs" />
