Added "name-tag" command
Usage: name-tag <tag> <name>

<tag> - a reference to a tag by index, *, or its old tagname.

<name> - should be a concise name that resembles the format of existing
tagnames.

--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Commands\Tags\MapCommand.cs" />
     <Compile Include="Commands\Tags\MatchTagsCommand.cs" />
     <Compile Include="Commands\Tags\ModelTestCommand.cs" />
+    <Compile Include="Commands\Tags\NameTagCommand.cs" />
     <Compile Include="Commands\Tags\NewTagCommand.cs" />
     <Compile Include="Commands\Tags\NullTagCommand.cs" />
     <Compile Include="Commands\Tags\OpenCacheCommand.cs" />
