Update command names and hinting

--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -66,7 +66,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -103,7 +102,7 @@
     <Compile Include="Cache\GameCacheContext.cs" />
     <Compile Include="Commands\Animations\AnimationContextFactory.cs" />
     <Compile Include="Commands\Animations\AnimationTestCommand.cs" />
-    <Compile Include="Commands\Animations\GetResourcesCommand.cs" />
+    <Compile Include="Commands\Animations\GetResourceInfoCommand.cs" />
     <Compile Include="Commands\ArgumentParser.cs" />
     <Compile Include="Commands\Bitmaps\BitmapContextFactory.cs" />
     <Compile Include="Commands\Bitmaps\ExtractBitmapCommand.cs" />
@@ -116,14 +115,12 @@
     <Compile Include="Commands\Core\ClearCommand.cs" />
     <Compile Include="Commands\Core\DumpLogCommand.cs" />
     <Compile Include="Commands\Core\EchoCommand.cs" />
-    <Compile Include="Commands\Core\ExecuteCommand.cs" />
     <Compile Include="Commands\Core\HelpCommand.cs" />
     <Compile Include="Commands\Core\SetLocaleCommand.cs" />
     <Compile Include="Commands\Editing\AddBlockElementsCommand.cs" />
     <Compile Include="Commands\Editing\CopyBlockElementsCommand.cs" />
     <Compile Include="Commands\Editing\EditBlockCommand.cs" />
     <Compile Include="Commands\Editing\EditTagContextFactory.cs" />
-    <Compile Include="Commands\Editing\ExecuteCommand.cs" />
     <Compile Include="Commands\Editing\ExitToCommand.cs" />
     <Compile Include="Commands\Editing\ListFieldsCommand.cs" />
     <Compile Include="Commands\Editing\PasteBlockElementsCommand.cs" />
@@ -152,19 +149,19 @@
     <Compile Include="Commands\Tags\TagDependencyCommand.cs" />
     <Compile Include="Commands\Tags\DuplicateTagCommand.cs" />
     <Compile Include="Commands\Tags\EditTagCommand.cs" />
-    <Compile Include="Commands\Tags\ExtractTagsCommand.cs" />
+    <Compile Include="Commands\Tags\ExtractAllTagsCommand.cs" />
     <Compile Include="Commands\Tags\ExtractTagCommand.cs" />
-    <Compile Include="Commands\Tags\GenerateLayoutsCommand.cs" />
+    <Compile Include="Commands\Tags\GenerateTagStructuresCommand.cs" />
     <Compile Include="Commands\Tags\GenerateTagNamesCommand.cs" />
     <Compile Include="Commands\Tags\ImportTagCommand.cs" />
     <Compile Include="Commands\Tags\GetTagInfoCommand.cs" />
     <Compile Include="Commands\Tags\ListTagsCommand.cs" />
     <Compile Include="Commands\Tags\ListNullTagsCommand.cs" />
-    <Compile Include="Commands\Tags\ListStringsCommand.cs" />
-    <Compile Include="Commands\Tags\ListUnreferencedTagsCommand.cs" />
+    <Compile Include="Commands\Tags\ListAllStringsCommand.cs" />
+    <Compile Include="Commands\Tags\ListUnusedTagsCommand.cs" />
     <Compile Include="Commands\Tags\GetMapInfoCommand.cs" />
     <Compile Include="Commands\Tags\MatchTagsCommand.cs" />
-    <Compile Include="Commands\Tags\ModelTestCommand.cs" />
+    <Compile Include="Commands\Tags\RenderModelTestCommand.cs" />
     <Compile Include="Commands\Tags\CreateTagCommand.cs" />
     <Compile Include="Commands\Tags\CleanCacheFilesCommand.cs" />
     <Compile Include="Commands\Tags\DeleteTagCommand.cs" />
@@ -175,14 +172,14 @@
     <Compile Include="Commands\Tags\TagCacheContextFactory.cs" />
     <Compile Include="Commands\Tags\UpdateMapFilesCommand.cs" />
     <Compile Include="Commands\Unicode\GetStringCommand.cs" />
-    <Compile Include="Commands\Unicode\ListCommand.cs" />
+    <Compile Include="Commands\Unicode\ListStringsCommand.cs" />
     <Compile Include="Commands\Unicode\SetStringCommand.cs" />
     <Compile Include="Commands\Unicode\UnicodeContextFactory.cs" />
     <Compile Include="Commands\VFiles\ExtractFilesCommand.cs" />
     <Compile Include="Commands\VFiles\ExtractFileCommand.cs" />
-    <Compile Include="Commands\VFiles\ImportFilesCommand.cs" />
-    <Compile Include="Commands\VFiles\ImportFileCommand.cs" />
-    <Compile Include="Commands\VFiles\ListCommand.cs" />
+    <Compile Include="Commands\VFiles\ReplaceAllFilesCommand.cs" />
+    <Compile Include="Commands\VFiles\ReplaceFileCommand.cs" />
+    <Compile Include="Commands\VFiles\ListFilesCommand.cs" />
     <Compile Include="Commands\VFiles\VFilesContextFactory.cs" />
     <Compile Include="Common\Angle.cs" />
     <Compile Include="Common\ArrayUtil.cs" />
