Export xml documentation in release mode

--- a/TagTool/TagTool.csproj
+++ b/TagTool/TagTool.csproj
@@ -52,6 +52,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <NoWarn>CS1591</NoWarn>
+    <DocumentationFile>bin\x64\Release\TagTool.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AssimpNet, Version=3.3.2.0, Culture=neutral, PublicKeyToken=3edc10cb77b1bca2, processorArchitecture=MSIL">
